syntax="proto3";

message EventInfo {
  string id = 1;
  string title = 2;
  string description = 3;
  string start_date = 4;
  string end_date = 5;
  string location = 6;
  string organizer = 7;
  repeated string attendees = 8;
  bool active = 9;
}

message CreateEventRequest {
  string title = 1;
  string description = 2;
  string start_date = 3;
  string end_date = 4;
  string location = 5;
  string organizer = 6;
  repeated string attendees = 7;
  bool active = 8;
}

message CreateEventResponse {
  EventInfo event = 1;  
}

message GetEventRequest {
  string id = 1;
}

message GetEventResponse {
  EventInfo event = 1;
}

message CancelEventRequest {
  string id = 1;
  string user_id = 2;
}

message CancelEventResponse {
  bool success = 1;
}

message UpdateEventRequest {
  string id = 1;
  optional string title = 2;
  optional string description = 3;
  optional string start_date = 4;
  optional string end_date = 5;
  optional string location = 6;
  optional string organizer = 7;
  optional bool active = 9;
  string user_id = 10;
}

message UpdateEventResponse {
  bool success = 1;
}

message AddAttendeeRequest {
  string event_id = 1;
  string user_id = 2;
}
message AddAttendeeResponse {
  bool success = 1;
}

message RemoveAttendeeRequest {
  string event_id = 1;
  string user_id = 2;
}
message RemoveAttendeeResponse {
  bool success = 1;
}

message CheckAttendeeRequest {
  string event_id = 1;
  string user_id = 2;
}
message CheckAttendeeResponse {
  bool success = 1;
}


service EventService {
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse); 
  rpc GetEvent(GetEventRequest) returns (GetEventResponse);
  rpc CancelEvent(CancelEventRequest) returns (CancelEventResponse);
  rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse);
  rpc AddAttendee(AddAttendeeRequest) returns (AddAttendeeResponse);
  rpc RemoveAttendee(RemoveAttendeeRequest) returns (RemoveAttendeeResponse);
  rpc CheckAttendee(CheckAttendeeRequest) returns (CheckAttendeeResponse);
}